<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_fragment_profile_private"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.PrivateProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout_profile_private"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--App logo-->
            <ImageView
                android:id="@+id/image_view_app_logo_profile_private"
                android:layout_width="100dp"
                android:layout_height="0dp"
                android:contentDescription="@string/desc_app_logo"
                android:elevation="@dimen/cardview_default_elevation"
                android:src="@drawable/app_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Profile-->
            <ImageView
                android:id="@+id/image_view_profile_profile_private"
                android:layout_width="@dimen/layout_width_image_view_profile"
                android:layout_height="0dp"
                android:contentDescription="@string/desc_app_logo"
                android:elevation="@dimen/cardview_default_elevation"
                android:src="@drawable/ic_baseline_close_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--Toolbar-->
            <Toolbar
                android:id="@+id/toolbar_profile_private"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <!--User image-->
    <ImageButton
        android:id="@+id/image_button_profile_private_user_image"
        android:layout_width="@dimen/max_width_image_button_user_image"
        android:layout_height="@dimen/max_height_image_button_user_image"
        android:layout_marginTop="@dimen/layout_marginTop_image_button_user_image"
        android:contentDescription="@string/description_user_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_layout_profile_private"
        app:srcCompat="@drawable/ic_baseline_person_24" />

    <!-- Username -->
    <EditText
        android:id="@+id/edit_text_profile_private_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_edit_text_profile_private"
        android:layout_marginTop="@dimen/layout_marginTop_edit_text_profile_private"
        android:autofillHints="false"
        android:editable="false"
        android:ems="10"
        android:hint="@string/hint_new_username"
        android:inputType="none"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/image_button_profile_private_change_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_button_profile_private_user_image"
        tools:ignore="Deprecated" />

    <!-- Change username -->
    <ImageButton
        android:id="@+id/image_button_profile_private_change_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/layout_marginEnd_image_button_edit_profile_private"
        android:contentDescription="@string/description_change_username"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_profile_private_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_profile_private_username" />

    <!-- Email -->
    <EditText
        android:id="@+id/edit_text_profile_private_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_edit_text_profile_private"
        android:autofillHints="false"
        android:editable="false"
        android:hint="@string/hint_new_email"
        android:inputType="none"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/image_button_profile_private_change_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_profile_private_username"
        tools:ignore="Deprecated,TextFields" />

    <!-- Change email -->
    <ImageButton
        android:id="@+id/image_button_profile_private_change_email"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/layout_marginEnd_image_button_edit_profile_private"
        android:contentDescription="@string/description_change_email"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_profile_private_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/edit_text_profile_private_email"
        app:layout_constraintTop_toTopOf="@+id/edit_text_profile_private_email" />

    <!-- Password -->
    <EditText
        android:id="@+id/edit_text_profile_private_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_edit_text_profile_private"
        android:autofillHints="false"
        android:editable="false"
        android:hint="@string/hint_new_password"
        android:inputType="none"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toStartOf="@+id/image_button_profile_private_change_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_profile_private_email"
        tools:ignore="Deprecated,TextFields" />

    <!-- Change password -->
    <ImageButton
        android:id="@+id/image_button_profile_private_change_password"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/layout_marginEnd_image_button_edit_profile_private"
        android:contentDescription="@string/description_change_username"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_profile_private_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edit_text_profile_private_password" />

    <!-- Password confirmation -->
    <EditText
        android:id="@+id/edit_text_profile_private_password_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_marginStart_edit_text_profile_private"
        android:autofillHints="false"
        android:hint="@string/hint_confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/edit_text_profile_private_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_profile_private_password"
        tools:visibility="visible" />

    <!-- Update user profile button -->
    <Button
        android:id="@+id/button_profile_private_update"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/button_update"
        app:layout_constraintEnd_toEndOf="@+id/image_button_profile_private_change_password"
        app:layout_constraintStart_toStartOf="@+id/edit_text_profile_private_password"
        app:layout_constraintTop_toBottomOf="@+id/edit_text_profile_private_password_confirm" />

    <!-- Update user profile progress -->
    <ProgressBar
        android:id="@+id/progress_bar_profile_private"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_profile_private_update"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>